Fix hover popover shifting content
- With the new addition of the `.content` wrapper, the content in the
can cause a scrollbar to appear. This leads to some unwanted content
shifts, and this commit removes overflow-y and adds some bottom padding
to accomodate for the popover heights.

--- a/src/app/pages/solution/solution.component.scss
+++ b/src/app/pages/solution/solution.component.scss
@@ -5,6 +5,8 @@
 	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
+	padding-bottom: 50px !important;
+	overflow-y: hidden;
 }
 
 .icon--mid {
